# gray

./: .gray_history  .grayrc  CMakeLists.txt  README.md  makefile
include/: GCanvas.h  GH1D.h  GHist.h  GTypes.h  GUtil.h  Gint.h
libraries/: CMakeLists.txt
libraries/GRoot/: GCanvas.cxx  GH1D.cxx  LinkDef.h
libraries/GUtil/: GUtil.cxx
libraries/Gint/: CMakeLists.txt  Gint.cxx  LinkDef.h
src/: CMakeLists.txt  gray  gray.cxx
